implemented listInvoices endpoint
